Add wordpress to dbw, update artifacts.

--- a/lighthouse-cli/test/fixtures/dobetterweb/dbw_tester.html
+++ b/lighthouse-cli/test/fixtures/dobetterweb/dbw_tester.html
@@ -53,6 +53,9 @@
 <!-- FAIL(errors-in-console): exception thrown -->
 <script type="text/javascript">throw new Error('An error');</script>
 
+<!-- Stack Pack Wordpress detection script -->
+<script src="fake-script-wp-includes"></script>
+
 <style>
   body {
     color: #000;
