--- a/lighthouse-cli/test/fixtures/dobetterweb/dbw_tester.html
+++ b/lighthouse-cli/test/fixtures/dobetterweb/dbw_tester.html
@@ -53,8 +53,8 @@
 <!-- FAIL(errors-in-console): exception thrown -->
 <script type="text/javascript">throw new Error('An error');</script>
 
-<!-- Stack Pack Wordpress detection script -->
-<script src="fake-script-wp-includes"></script>
+<!-- Add non-functional script to appear to be a Wordpress page for Stack Packs. -->
+<script type="example" src="fake-script-wp-includes"></script>
 
 <style>
   body {
