--- a/lighthouse-core/report/html/templates.html
+++ b/lighthouse-core/report/html/templates.html
@@ -60,11 +60,35 @@ limitations under the License.
           <span class="lh-audit-group__title"></span>
           <span class="lh-audit-group__itemcount"></span>
           <!-- .lh-audit-group__description will be added here -->
+          <!-- .lh-metrics-toggle will be added here -->
         </div>
         <div class=""></div>
       </div>
     </summary>
   </details>
+</template>
+
+<!-- Lighthouse metrics toggle -->
+<template id="tmpl-lh-metrics-toggle">
+  <div class="lh-metrics-toggle">
+    <div class="lh-metrics-toggle-less lh-metrics-toggle--active">
+      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24">
+        <defs>
+          <path id="a" d="M0 0h24v24H0V0z" />
+        </defs>
+        <clipPath id="b">
+          <use xlink:href="#a" overflow="visible" />
+        </clipPath>
+        <path class="lh-metrics-toggle-lines" d="M4 9h16v2H4zm0 4h10v2H4z" clip-path="url(#b)" />
+      </svg>
+    </div>
+    <div class="lh-metrics-toggle-more">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <path class="lh-metrics-toggle-lines" d="M3 18h12v-2H3v2zM3 6v2h18V6H3zm0 7h18v-2H3v2z" />
+        <path fill="none" d="M0 0h24v24H0V0z" />
+      </svg>
+    </div>
+  </div>
 </template>
 
 <!-- Lighthouse audit -->
@@ -88,10 +112,10 @@ limitations under the License.
 <!-- Lighthouse perf metric -->
 <template id="tmpl-lh-metric">
   <div class="lh-metric">
-    <div class="lh-metric__innerwrap tooltip-boundary">
+    <div class="lh-metric__innerwrap">
       <span class="lh-metric__title"></span>
       <div class="lh-metric__value"></div>
-      <div class="lh-metric__description tooltip"></div>
+      <div class="lh-metric__description"></div>
     </div>
   </div>
 </template>
